--- a/src/styles/components/footer/footer.css
+++ b/src/styles/components/footer/footer.css
@@ -45,8 +45,8 @@
           align-items: center;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin-bottom: 20px;
-  margin-top: 30px;
+  margin-bottom: 15px;
+  margin-top: 40px;
 }
 .footer__social-media__link {
   display: block;
@@ -56,19 +56,11 @@
   border-radius: 50%;
   background: white;
   margin-right: 0.7rem;
-  -webkit-transition: all 0.3s linear;
-  transition: all 0.3s linear;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 .footer__social-media__link:last-of-type {
   margin-right: 0;
-}
-.footer__social-media__link:hover {
-  -webkit-box-shadow: 2px 2px 0 #FFFFFF, 2px -2px 0 #FFFFFF, -2px 2px 0 #FFFFFF, -2px -2px 0 #FFFFFF;
-          box-shadow: 2px 2px 0 #FFFFFF, 2px -2px 0 #FFFFFF, -2px 2px 0 #FFFFFF, -2px -2px 0 #FFFFFF;
-  background-color: black;
-}
-.footer__social-media__link:hover > * {
-  color: white;
 }
 .footer__social-media__link__icon {
   display: -webkit-box;
@@ -89,11 +81,16 @@
   width: 100%;
   color: #000000;
 }
+.footer__social-media__link__icon__vogue {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+}
 .footer__copyright {
   margin-bottom: 5px;
 }
 .footer__copyright__text {
   color: #828282;
-  font-size: 0.6rem;
+  font-size: 0.75rem;
 }
 /*# sourceMappingURL=footer.css.map */
