--- a/src/styles/components/footer/footer.scss
+++ b/src/styles/components/footer/footer.scss
@@ -11,8 +11,8 @@
 
   &__social-media {
     @include flexSetup(row, center, space-around);
-    margin-bottom: 20px;
-    margin-top: 30px;
+    margin-bottom: 15px;
+    margin-top: 40px;
 
     &__link {
       display: block;
@@ -22,19 +22,10 @@
       border-radius: 50%;
       background: white;
       margin-right: 0.7rem;
-      transition: all 0.3s linear;
+      transition: all 0.5s ease;
 
       &:last-of-type {
         margin-right: 0;
-      }
-
-      &:hover {
-        box-shadow: 2px 2px 0 $white-color, 2px -2px 0 $white-color, -2px 2px 0 $white-color, -2px -2px 0 $white-color;
-        background-color: black;
-
-        & > * {
-          color: white;
-        }
       }
 
       &__icon {
@@ -43,6 +34,12 @@
         height: 100%;
         width: 100%;
         color: $black-color;
+
+        &__vogue {
+          width: 100%;
+          height: 100%;
+          background-color: black;
+        }
       }
     }
   }
@@ -52,7 +49,8 @@
 
     &__text {
       color: $gray-color;
-      font-size: 0.6rem;
+      font-size: 0.75rem;
+
     }
   }
 }
