--- a/src/styles/components/header/header.scss
+++ b/src/styles/components/header/header.scss
@@ -36,6 +36,15 @@
 }
 
 
+@keyframes changingMode {
+  0% {
+    background-color: rgba(0,0,0,1);
+  }
+  100% {
+    background-color: rgba(0,0,0,0);
+  }
+}
+
 // STYLES
 
 .header {
@@ -45,6 +54,20 @@
   width: 100vw;
   position: fixed;
   top: 0;
+
+  &__black {
+    content: '';
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    &--animate {
+      animation: changingMode 1s forwards ease-out;
+    }
+  }
 
   &__logo {
     width: 230px;
