--- a/src/styles/components/header/media_queries/media.scss
+++ b/src/styles/components/header/media_queries/media.scss
@@ -18,6 +18,7 @@
     &__logo {
       font-size: 15px;
       margin: 15px 0;
+      width: 200px;
     }
     &__mode-changer {
       position: static;
