--- a/src/styles/components/main/grid/grid.css
+++ b/src/styles/components/main/grid/grid.css
@@ -43,12 +43,14 @@
   font-size: 1.5rem;
   width: 100%;
   height: 100%;
-  min-height: 300px;
   letter-spacing: 0.2px;
 }
 .main__grid__item__photo, .main__grid__item__artwork {
   height: 100%;
   width: 100%;
+}
+.main__grid__item__artwork {
+  height: 25vw;
 }
 .main__grid__item__photo:nth-of-type(1) {
   grid-column: 1/5;
@@ -104,20 +106,19 @@
   grid-column: 1/5;
 }
 .main__grid__item__artwork:nth-of-type(2) {
-  grid-column: 9/13;
+  grid-column: 5/9;
 }
 .main__grid__item__artwork:nth-of-type(3) {
-  grid-column: 1/5;
+  grid-column: 9/13;
 }
 .main__grid__item__artwork:nth-of-type(4) {
   grid-column: 1/5;
 }
 .main__grid__item__artwork:nth-of-type(5) {
-  grid-column: 1/5;
+  grid-column: 9/13;
 }
 .main__grid__item__artwork:nth-of-type(6) {
-  grid-column: 5/13;
-  grid-row: 2;
+  grid-column: 1/5;
 }
 .main__grid__item__artwork:nth-of-type(7) {
   grid-column: 5/9;
@@ -126,31 +127,17 @@
   grid-column: 9/13;
 }
 .main__grid__item__artwork:nth-of-type(9) {
-  grid-column: 8/13;
+  grid-column: 1/5;
 }
 .main__grid__item__artwork:nth-of-type(10) {
-  grid-column: 1/8;
-  grid-row: 4;
+  grid-column: 5/9;
 }
 .main__grid__item__artwork:nth-of-type(11) {
-  grid-column: 1/4;
+  grid-column: 9/13;
 }
 .main__grid__item__artwork:nth-of-type(12) {
   grid-column: 5/9;
-  grid-row: 1;
-}
-.main__grid__item__artwork:nth-of-type(13) {
-  grid-column: 9/13;
-}
-.main__grid__item__artwork:nth-of-type(14) {
-  grid-column: 1/5;
-}
-.main__grid__item__artwork:nth-of-type(15) {
-  grid-column: 9/13;
-}
-.main__grid__item__artwork:nth-of-type(16) {
-  grid-column: 5/9;
-  grid-row: 6;
+  grid-row: 2;
 }
 
 @media (max-width: 1024px) {
@@ -168,6 +155,46 @@
     grid-column: 7/13;
     margin-top: 0;
   }
+  .main__grid__item__artwork {
+    height: 50vw;
+  }
+  .main__grid__item__artwork:nth-of-type(1) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(2) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(3) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(4) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(5) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(6) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(7) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(8) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(9) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(10) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(11) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(12) {
+    grid-column: 7/13;
+    grid-row: 2;
+  }
 }
 @media (max-width: 768px) {
   .main__grid {
@@ -181,12 +208,15 @@
   .main__grid {
     gap: 2px;
   }
-  .main__grid__item__title {
-    height: 100vh;
-  }
   .main__grid__item__photo:nth-child(n), .main__grid__item__artwork:nth-child(n) {
     margin-top: 0;
     grid-column: 1/13;
+  }
+  .main__grid__item__artwork {
+    height: 100vw;
+  }
+  .main__grid__item__artwork:nth-of-type(12) {
+    grid-row: 4;
   }
 }
 /*# sourceMappingURL=grid.css.map */
