--- a/src/styles/components/main/grid/grid.scss
+++ b/src/styles/components/main/grid/grid.scss
@@ -21,7 +21,6 @@
     font-size: 1.5rem;
     width: 100%;
     height: 100%;
-    min-height: 300px;
     letter-spacing: 0.2px;
   }
   
@@ -29,6 +28,10 @@
   &__item__photo, &__item__artwork { 
     height: 100%;
     width: 100%;
+  }
+
+  &__item__artwork {
+    height: 25vw;
   }
 
 
@@ -108,11 +111,11 @@
   }
 
   &__item__artwork:nth-of-type(2) {  
-    grid-column: 9 / 13;
+    grid-column: 5 / 9;
   }
 
   &__item__artwork:nth-of-type(3) {
-    grid-column: 1 / 5;
+    grid-column: 9 / 13;
   }
 
   &__item__artwork:nth-of-type(4) {
@@ -120,12 +123,11 @@
   }
 
   &__item__artwork:nth-of-type(5) {
-    grid-column: 1 / 5;
+    grid-column: 9 / 13;
   }
 
   &__item__artwork:nth-of-type(6) {
-    grid-column: 5 / 13;
-    grid-row: 2;
+    grid-column: 1 / 5;
   }
 
   &__item__artwork:nth-of-type(7) {
@@ -137,38 +139,20 @@
   }
 
   &__item__artwork:nth-of-type(9) {
-    grid-column: 8 / 13;
+    grid-column: 1 / 5;
   }
 
   &__item__artwork:nth-of-type(10) {
-    grid-column: 1 / 8;
-    grid-row: 4;
+    grid-column: 5 / 9;
   }
 
   &__item__artwork:nth-of-type(11) {
-    grid-column: 1 / 4;
+    grid-column: 9 / 13;
   }
 
   &__item__artwork:nth-of-type(12) {
     grid-column: 5 / 9;
-    grid-row: 1;
-  }
-
-  &__item__artwork:nth-of-type(13) {
-    grid-column: 9 / 13;
-  }
-
-  &__item__artwork:nth-of-type(14) {
-    grid-column: 1 / 5;
-  }
-
-  &__item__artwork:nth-of-type(15) {
-    grid-column: 9 / 13;
-  }
-
-  &__item__artwork:nth-of-type(16) {
-    grid-column: 5 / 9;
-    grid-row: 6;
+    grid-row: 2;
   }
 }
 
