--- a/src/styles/components/main/grid/media_queries/media.css
+++ b/src/styles/components/main/grid/media_queries/media.css
@@ -13,6 +13,46 @@
     grid-column: 7/13;
     margin-top: 0;
   }
+  .main__grid__item__artwork {
+    height: 50vw;
+  }
+  .main__grid__item__artwork:nth-of-type(1) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(2) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(3) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(4) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(5) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(6) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(7) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(8) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(9) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(10) {
+    grid-column: 1/7;
+  }
+  .main__grid__item__artwork:nth-of-type(11) {
+    grid-column: 7/13;
+  }
+  .main__grid__item__artwork:nth-of-type(12) {
+    grid-column: 7/13;
+    grid-row: 2;
+  }
 }
 @media (max-width: 768px) {
   .main__grid {
@@ -26,12 +66,15 @@
   .main__grid {
     gap: 2px;
   }
-  .main__grid__item__title {
-    height: 100vh;
-  }
   .main__grid__item__photo:nth-child(n), .main__grid__item__artwork:nth-child(n) {
     margin-top: 0;
     grid-column: 1/13;
+  }
+  .main__grid__item__artwork {
+    height: 100vw;
+  }
+  .main__grid__item__artwork:nth-of-type(12) {
+    grid-row: 4;
   }
 }
 /*# sourceMappingURL=media.css.map */
