--- a/src/styles/components/main/grid/grid.css
+++ b/src/styles/components/main/grid/grid.css
@@ -46,7 +46,7 @@
   letter-spacing: 0.2px;
 }
 .main__grid__item__photo, .main__grid__item__artwork {
-  height: 100%;
+  height: 660px;
   width: 100%;
 }
 .main__grid__item__artwork {
@@ -68,39 +68,133 @@
   grid-column: 5/9;
 }
 .main__grid__item__photo:nth-of-type(6) {
-  grid-column: 10/13;
-  height: 80%;
-}
-.main__grid__item__photo:nth-of-type(7) {
-  grid-column: 1/7;
-}
-.main__grid__item__photo:nth-of-type(8) {
-  grid-column: 7/13;
-}
-.main__grid__item__photo:nth-of-type(9) {
-  grid-column: 1/7;
-}
-.main__grid__item__photo:nth-of-type(10) {
-  grid-column: 1/4;
-}
-.main__grid__item__photo:nth-of-type(11) {
-  grid-column: 4/10;
-}
-.main__grid__item__photo:nth-of-type(12) {
-  grid-column: 10/13;
-}
-.main__grid__item__photo:nth-of-type(13) {
   grid-column: 9/13;
 }
-.main__grid__item__photo:nth-of-type(14) {
+.main__grid__item__photo:nth-of-type(7) {
   grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(8) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(9) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(10) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(11) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(12) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(13) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(14) {
+  grid-column: 5/9;
 }
 .main__grid__item__photo:nth-of-type(15) {
   grid-column: 9/13;
 }
 .main__grid__item__photo:nth-of-type(16) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(17) {
   grid-column: 5/9;
-  grid-row: 6;
+}
+.main__grid__item__photo:nth-of-type(18) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(19) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(20) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(21) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(22) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(23) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(24) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(25) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(26) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(27) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(28) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(29) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(30) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(31) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(32) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(33) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(34) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(35) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(36) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(37) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(38) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(39) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(40) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(41) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(42) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(43) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(44) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(45) {
+  grid-column: 9/13;
+}
+.main__grid__item__photo:nth-of-type(46) {
+  grid-column: 1/5;
+}
+.main__grid__item__photo:nth-of-type(47) {
+  grid-column: 5/9;
+}
+.main__grid__item__photo:nth-of-type(48) {
+  grid-column: 9/13;
 }
 .main__grid__item__artwork:nth-of-type(1) {
   grid-column: 1/5;
