--- a/src/styles/components/main/grid/grid.scss
+++ b/src/styles/components/main/grid/grid.scss
@@ -23,10 +23,9 @@
     height: 100%;
     letter-spacing: 0.2px;
   }
-  
-  
+
   &__item__photo, &__item__artwork { 
-    height: 100%;
+    height: 660px;
     width: 100%;
   }
 
@@ -58,40 +57,39 @@
   }
 
   &__item__photo:nth-of-type(6) {
-    grid-column: 10 / 13;
-    height: 80%;
-  }
-
-  &__item__photo:nth-of-type(7) {
-    grid-column: 1 / 7;
-  }
-
-  &__item__photo:nth-of-type(8) {
-    grid-column: 7 / 13;
-  }
-
-  &__item__photo:nth-of-type(9) {
-    grid-column: 1 / 7;
-  }
-
-  &__item__photo:nth-of-type(10) {
-    grid-column: 1 / 4;
-  }
-
-  &__item__photo:nth-of-type(11) {
-    grid-column: 4 / 10;
-  }
-
-  &__item__photo:nth-of-type(12) {
-    grid-column: 10 / 13;
-  }
-
-  &__item__photo:nth-of-type(13) {
     grid-column: 9 / 13;
   }
 
-  &__item__photo:nth-of-type(14) {
+  &__item__photo:nth-of-type(7) {
     grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(8) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(9) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(10) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(11) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(12) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(13) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(14) {
+    grid-column: 5 / 9;
   }
 
   &__item__photo:nth-of-type(15) {
@@ -99,8 +97,135 @@
   }
 
   &__item__photo:nth-of-type(16) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(17) {
     grid-column: 5 / 9;
-    grid-row: 6;
+  }
+
+  &__item__photo:nth-of-type(18) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(19) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(20) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(21) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(22) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(23) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(24) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(25) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(26) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(27) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(28) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(29) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(30) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(31) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(32) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(33) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(34) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(35) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(36) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(37) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(38) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(39) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(40) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(41) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(42) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(43) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(44) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(45) {
+    grid-column: 9 / 13;
+  }
+
+  &__item__photo:nth-of-type(46) {
+    grid-column: 1 / 5;
+  }
+
+  &__item__photo:nth-of-type(47) {
+    grid-column: 5 / 9;
+  }
+
+  &__item__photo:nth-of-type(48) {
+    grid-column: 9 / 13;
   }
 
 
