--- a/src/styles/components/main/picture/picture.scss
+++ b/src/styles/components/main/picture/picture.scss
@@ -24,7 +24,7 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
-    object-position: left;
+    object-position: center;
     pointer-events: none;
   }
 }
