Lazy loading, bug fixes

--- a/src/styles/components/main/main/main.css
+++ b/src/styles/components/main/main/main.css
@@ -68,6 +68,10 @@
   top: 30px;
 }
 
+.background-loading {
+  display: none;
+}
+
 @media (max-width: 1200px) {
   .main__menu-icon {
     left: calc(100vw - 80px);
