--- a/src/styles/components/header/header.css
+++ b/src/styles/components/header/header.css
@@ -77,6 +77,7 @@
   height: 100px;
   width: 100vw;
   position: fixed;
+  z-index: 1;
   top: 0;
 }
 .header__black {
@@ -252,7 +253,6 @@
   }
   .header__logo {
     font-size: 16px;
-    width: 200px;
   }
 }
 @media (max-width: 1024px) {
@@ -268,6 +268,7 @@
   .header__logo {
     font-size: 15px;
     margin: 15px 0;
+    width: 200px;
   }
   .header__mode-changer {
     position: static;
