--- a/src/styles/components/header/media_queries/media.css
+++ b/src/styles/components/header/media_queries/media.css
@@ -11,6 +11,7 @@
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+    padding: 8px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
