--- a/src/styles/components/header/media_queries/media.scss
+++ b/src/styles/components/header/media_queries/media.scss
@@ -13,6 +13,7 @@
 @media (max-width: 1024px) {
   .header {
     height: fit-content;
+    padding: 8px;
     flex-direction: column;
 
     &__logo {
