--- a/src/styles/components/main/main/media_queries/media.scss
+++ b/src/styles/components/main/main/media_queries/media.scss
@@ -8,8 +8,27 @@
 
 @media (max-width: 1024px) {
   .main__menu-icon {
-    top: 10px;
+    top: 24px;
     left: calc(100vw - 50px);
     transform: translate(0, 0);
+    height: 25px;
+    width: 30px;
+
+    &__top-bar {
+      top: 2px;
+    }
+
+    &__middle-bar {
+      top: 11px;
+    }
+
+    &__bottom-bar {
+      top: 19px;
+    }
+  }
+}
+@media (max-width: 340px) {
+  .main__menu-icon {
+    left: calc(100vw - 40px);
   }
 }
